# daily_stock_analysis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  analyzer.py  docker-compose.yml  main.py  setup.cfg
refactor/backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
refactor/backend/ci/github-actions/: refactor-backend-ci.example.yml
refactor/backend/config/: notification-retry-alert-thresholds.json  promtool-installer.defaults  strict-gate-alert-thresholds.json  validator-error-code-metadata-lint.json  validator-error-code-metadata-overrides.json  validator-error-codes.json  validator-error-context-high-frequency-samples.json  validator-placeholder-markers.json
refactor/backend/scripts/: check-prometheus-rules.sh  ci.sh  install-promtool.sh  profile_suggestion_helpers.py  rehearse-m3-loop.sh  rehearse-m4-positive-flow.sh  smoke-positive-strategy-flow.py  smoke-real-llm.sh  sync-notification-retry-alert-thresholds.py  sync-strict-gate-alert-thresholds.py  sync-validator-error-codes.py  validate-alertmanager-route-consistency.py  validate-notification-retry-runbook.py  validate-profile-suggestion-actions-schema.py  validate-promtool-installer-config.sh  validate-strict-gate-summary-schema.py  validate-summary-contract-changelog.py  validate-validator-error-code-catalog.py  validate-validator-error-code-metadata-lint.py  validate-validator-error-code-metadata-overrides.py  validate-validator-error-context-high-frequency-schema.py  validate-validator-placeholder-markers.py
(+688 files in other folders)
