[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-stock-analysis-refactor-backend"
version = "0.1.0"
description = "Refactor backend for daily stock analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "chromadb>=0.5.5",
  "dashscope>=1.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.26.0",
  "jsonschema>=4.21.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
